--- a/eCommerce/market/users/templates/users/login.html
+++ b/eCommerce/market/users/templates/users/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    
+    <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 </head>
 <body>
     <div class="login-container">
