--- a/eCommerce/market/users/templates/users/register.html
+++ b/eCommerce/market/users/templates/users/register.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
+    <link rel="stylesheet" href="{% static 'users/css/style2.css' %}">
     
 </head>
 <body>
