--- a/eCommerce/market/users/static/users/css/style.css
+++ b/eCommerce/market/users/static/users/css/style.css
@@ -39,8 +39,8 @@ form {
 form input[type="email"],
 form input[type="password"],
 form input[type="text"] {
-    width: 100%;
-    padding: 10px;
+    max-width: 100%;
+    padding: 8px 10px; 
     margin: 10px 0;
     border: 1px solid #ccc; /* Bordes gris claro */
     border-radius: 5px;
@@ -60,7 +60,7 @@ form input[type="text"]:focus {
 
 /* Botón */
 .btn {
-    width: 100%;
+    max-width: 100%;
     padding: 10px;
     background-color: #000; /* Negro puro */
     color: #fff; /* Texto blanco */
