--- a/eCommerce/market/dashboard/templates/vendedor/seller_dashboard.html
+++ b/eCommerce/market/dashboard/templates/vendedor/seller_dashboard.html
@@ -2,14 +2,14 @@
 {% load static %}
 <html>
     <head>
-        <title>Dashboard del Vendedor</title>
+        <title>Dashboard del Vendedor - MarketCO®️™️</title>
     </head>
     <body>
         <h1>MarketCO - Dashboard de Administración</h1>
         <img src="{% static 'media/img1.png' %}" height="80" width="80">
         <div>
             <h2>Bienvenido {{username}}</h2>
-            <input type="button" id="goHome" value="Cerrar Sesión" onclick="console.log('xd')">
+            <input type="button" id="goHome" value="Cerrar Sesión" onclick="alert('Producto Eliminado con exito')">
         </div>
         <a href="{% url 'agregar_producto' %}">Agregar un nuevo producto a tu catalogo</a>
         <input type="button" value="Agregar Producto" onclick=window.location.href="{% url 'agregar_producto' %}" class="btn btn-primary">
@@ -20,12 +20,16 @@
                     <th>Precio</th>
                     <th>Stock</th>
                     <th>Acciones</th>
+                    <th>Media</th>
                 </tr>
                 {% for producto in productos %}
                 <tr>
                     <td>{{ producto.nombre }}</td>
                     <td>${{ producto.precio }}</td>
                     <td>{{ producto.stock }}</td>
+                    <td>
+                        <img src="{{ producto.imagen_url }}" alt="Imagen de {{ producto.nombre }}" height="50" width="50">
+                    </td>
                     <td>
                         <a href="{% url 'editar_producto' producto.id %}">Editar</a>
                         <a href="{% url 'eliminar_producto' producto.id %}">Eliminar</a>
