--- a/eCommerce/market/home/static/home/css/style3.css
+++ b/eCommerce/market/home/static/home/css/style3.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Arial', sans-serif;
     color: #333;
     background-color: #f9f9f9;
+    justify-content: center;
 }
 
 .container {
@@ -109,4 +110,14 @@ body {
     .content {
         padding: 20px 10px;
     }
+}
+
+footer{
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
