--- a/eCommerce/market/home/templates/home/index.html
+++ b/eCommerce/market/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARKETCO | Inicio</title>
+    <title>MARKETCO®️™️ | Inicio</title>
     <link rel="stylesheet" href="{% static 'home/css/style3.css' %}">
 </head>
 <body>
@@ -40,5 +40,6 @@
             </p>
         </div>
     </main>
+    <footer><p>MarketCO®️™️ todos los derechos reservados</p></footer>
 </body>
 </html>
