--- a/eCommerce/market/dashboard/templates/cliente/cliente_dashboard.html
+++ b/eCommerce/market/dashboard/templates/cliente/cliente_dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard del Vendedor|MarketCO®️™️</title>
+    <title>Dashboard del Cliente|MarketCO®️™️</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-light">
@@ -14,45 +14,39 @@
 
         </div>
     </nav>
-
     <div class="container mt-5">
         <div class="text-center">
-            <img src="{% static 'media/img1.png' %}" class="img-fluid" style="height: 80px; width: 80px;">
-            <h1 class="mt-3">Dashboard de Administración</h1>
+            <img src="{% static 'media/img2.png' %}" class="img-fluid" style="height: 80px; width: 80px;">
+            <h1 class="mt-3">Compra de tus tiendas favoritas</h1>
         </div>
         <div class="text-center mt-4">
             <h2>Bienvenido, {{ username }}</h2>
         </div>
-
-        <div class="text-end my-4">
-            <a href="{% url 'agregar_producto' %}" class="btn btn-primary">Agregar Producto</a>
-        </div>
-
-        {% if productos %}
+        {% if producto_vendedor %}
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
                         <th>Nombre</th>
                         <th>Precio</th>
                         <th>Stock</th>
+                        <th>info vendedor :)</th>
                         <th>Imagen</th>
-                        <th>Acciones</th>
+                        <th>Acción</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for producto in productos %}
+                    {% for item in producto_vendedor %}
                         <tr>
-                            <td>{{ producto.nombre }}</td>
-                            <td>${{ producto.precio }}</td>
-                            <td>{{ producto.stock }}</td>
+                            <td>{{ item.producto.nombre }}</td>
+                            <td>${{ item.producto.precio }}</td>
+                            <td>{{ item.producto.stock }}</td>
+                            <td>{{ item.vendedor_nombre }}</td> 
                             <td>
-                                <img src="{{ producto.imagen_url }}" alt="Imagen de {{ producto.nombre }}" class="img-thumbnail" style="height: 80px; width: 80px;">
+                                <img src="{{ item.producto.imagen_url }}" alt="Imagen de {{ item.producto.nombre }}" class="img-thumbnail" style="height: 80px; width: 80px;">
                             </td>
                             <td>
-                                <a href="{% url 'editar_producto' producto.id %}" class="btn btn-warning btn-sm">Editar</a>
-                                <a href="{% url 'eliminar_producto' producto.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-                            </td>
-                        </tr>
+                                <a href="{% url 'pasarela_pago' item.producto.id %}" class="btn btn-primary btn-sm">Comprar</a>
+                            </tr>
                     {% endfor %}
                 </tbody>
             </table>
